# manga_extract

./: .env.example  .gitignore  COMIC_PIPELINE.md  README.md
.github/workflows/: build-exe.yml
agent/: pyproject.toml  requirements.txt  run_app.py
agent/flowboard/: __init__.py  config.py  main.py
agent/flowboard/routes/: auth.py  comic.py  nodes.py
agent/flowboard/services/: flow_client.py  flow_sdk.py  media.py  ws_server.py
agent/flowboard/services/comic/: __init__.py  bridge.py  characters.py  panel_ml.py  panels.py  prompts.py
agent/flowboard/worker/: processor.py
agent/scripts/: comic_edit_smoke.py
agent/tests/: conftest.py  test_auth.py  test_comic_bridge.py  test_comic_characters.py  test_comic_clean_enhance.py  test_comic_combine.py  test_comic_panel_ml.py  test_comic_panels.py  test_comic_pipeline.py  test_flow_client.py  test_flow_sdk.py  test_nodes_bulk.py
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/canvas/: AddNodePalette.tsx  Board.tsx  ComicCharsBody.tsx  ComicCombineBody.tsx  ComicDetectBody.tsx  ComicEditBody.tsx  ComicImportBody.tsx  ComicPageBody.tsx  ComicPanelBody.tsx  ComicPanelsBody.tsx  NodeCard.tsx  PanelBoxEditor.tsx  comicShared.ts
frontend/src/components/: AccountPanel.tsx  Toolbar.tsx
frontend/src/store/: board.ts  generation.ts
packaging/: READ-ME-FIRST.txt  flowboard.spec
