[project]
name = "flowboard-agent"
version = "1.2.20"
description = "Flowboard local agent: FastAPI + SQLite + extension bridge"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "pydantic>=2.8",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    # Comic pipeline — Node 1 panel extraction (pure OpenCV XY-cut, no model).
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
# Optional ML panel detector (Node 1, YOLO). Heavy — install only if you want
# the learned detector for dense/borderless pages the heuristic can't cut.
ml = [
    "torch>=2.2",
    "ultralytics>=8.3",
    "huggingface_hub>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flowboard"]

[tool.ruff]
line-length = 100
target-version = "py310"
